====================================================================================================
1.3.2
====================================================================================================

* Adding management of a service's jurisdiction and region-site associations
  - adminstrators can now add/edit/delete which sites a postcode or region is assigned to

====================================================================================================
1.3.1
====================================================================================================

* Removing defunct interview rescoring

* Cedar integration completed
  - There is now an option to add a "Cedar Instance" to Sabretooth
  - Cedar instances gain access to all interview recordings

* Adding source management
  - added additional option for source's participants to override quota restrictions

* Greatly improved performance of CSV report output type
  - replaced internal library for generating CSV files with native code
  - reports generation time no longer scales linearly with the number of rows

====================================================================================================
1.3.0
====================================================================================================

* Redesigning queueing system to improve performance
  - Removed queue restrictions
  - Participants who are currently "available" are no longer assigned before those who are not
  - Changes to the system which affect queues done through services other than Sabretooth may take
    up to an hour to come into effect (eg: participant release, editing participants, etc)
  - Calling time restrictions are now only reflected on or near the hour
  - Merged "available" and "not available" queues
  - Queue operations take a fraction of the time compared to before at the cost of operations which
    edit a participant's details being slighly longer (processing load is now distributed)