@@ -5,6 +5,10 @@
 * Adding management of a service's jurisdiction and region-site associations
   - adminstrators can now add/edit/delete which sites a postcode or region is assigned to
 
+* Integrating IVR support as a new interview method type
+  - IVR (interactive voice recognition) interviewing can now be used instead of operator-based
+    calling
+
 ====================================================================================================
 1.3.1
 ====================================================================================================
